# gnome-shell-extensions-workspace-monitor

./: .gitignore  Makefile.am  README  README.md  TODO  autogen.sh  configure.ac  include.mk
data/: screenshot.xcf
po/: POTFILES.in  fr.po  gnome-shell-extensions-workspace-monitor.pot  pt.po
src/: Makefile.am  dim.glsl  dim.js  extension.js  intellihide.js  lib.js  metadata.json  metadata.json.in  org.gnome.shell.extensions.workspace-monitor.gschema.xml.in  prefs.js  stylesheet.css  windowfilter.js
